severity Added support for 'Severity' attribute, which controls whether an error or a warning should be issued

--- a/Scythe.Fody/Scythe.Fody.csproj
+++ b/Scythe.Fody/Scythe.Fody.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scythes\MethodInstructions.cs" />
     <Compile Include="Scythes\ParametersCount.cs" />
+    <Compile Include="Severity.cs" />
     <Compile Include="Toggler.cs" />
   </ItemGroup>
   <ItemGroup>
