--- a/Scythe.Fody.Test/Scythe.Fody.Test.csproj
+++ b/Scythe.Fody.Test/Scythe.Fody.Test.csproj
@@ -68,8 +68,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="MethodInstructionsTest.cs" />
+    <Compile Include="ParametersCountTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScytheTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
