boxing-scythe Added a scythe, which checks whether boxing operation is performed inside a loop

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Scythe.TestParametersCount/obj/
 Scythe.TestMethodInstructions/bin/
 Scythe.CyclomaticComplexityTest/obj/
 Scythe.CyclomaticComplexityTest/bin/
+Scythe.TestBoxing/bin/
+Scythe.TestBoxing/obj/
