--- a/Scythe.Fody.Test/Scythe.Fody.Test.csproj
+++ b/Scythe.Fody.Test/Scythe.Fody.Test.csproj
@@ -68,6 +68,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="BoxingTest.cs" />
     <Compile Include="CyclomaticComplexityTest.cs" />
     <Compile Include="MethodInstructionsTest.cs" />
     <Compile Include="ParametersCountTest.cs" />
